1.18.4
------

1.18.3
------
(RB=322445)
add NPE check for transport client compression

1.18.2
------
(RB=313441)
Use Gradle 1.12.

(RB=312937)
Fix bug in how example requests are generated for batch update and batch partial update.

(RB=313946)
Introduced new interface called RestLiResponseData to expose response data to filters. 

1.18.1
------
(RB=315193)
Fix typo in protocol version header.

1.18.0
------
(RB=316654)
Introducing a check inside BatchGetRequestBuilder.build() to fail when the key is CompoundKey or ComplexResourceKey.

1.17.3
------
(RB=315698)
Fix issue with inconsistent space encoding/decoding in uri paths.

(RB=313443)
Add cache to RecordTemplate field getter/setter whose type needs to be coerced (custom type).
Note that RecordTemplate classes need to re-generated from .pdsc files to activate this feature.

(RB=318144)
Add wire attrs as a param.

1.17.2
------
(RB=313174)
Re-apply "Re-design Rest.li response API for various batch operations" with performance issue solved.

(RB=312225)
Support BatchGetEntity and EntityResponse for ScatterGatherBuilder.

1.17.1
------
(We skipped this version)

1.17.0
------
(RB=314186)
CreateIdResponse.getId() now throws an exception if the requested Id is a Complex or Compound key.

1.16.2
------
(RB=312291)
Match previous changes in BatchCreateIdResponse to BatchCreateResponse

(RB=313446)
Temproarily revert "Re-design Rest.li response API for various batch operations" due to performance issue.

1.16.1
------
remove smurfing ability in D2 KeyMapper
(RB=310598)

fix bug in zookeeperAnnouncerJmx
(RB=312571)

1.16.0
------
(RB=311122)
Decoders for responses that require a non-null dataMap will now return null if passed a null dataMap in wrapResponse.

(RB=310817)
Allow filters access to strongly typed Ids in batch create responses.

(RB=310721)
Keep non-batch query parameters in ScatterGatherBuilder.

(RB=272198)