@@ -2,5 +2,6 @@
   "type" : "record",
   "name" : "Followed",
   "namespace" : "com.linkedin.restli.tools.twitter",
+  "include" : [ "Status" ],
   "fields" : [ ]
 }
